AS3. release version with language translation.

--- a/src/client/as3/action/popup.html
+++ b/src/client/as3/action/popup.html
@@ -3,6 +3,9 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		
+		<link href="xenobe_omnibox.css" rel="stylesheet" type="text/css">
+		
 		<title>AS3 help popup</title>
 	</head>
 	
@@ -11,6 +14,7 @@
 		<p>Select Language:</p>
 		<select id="languageDropdown"></select>
 		
+		<script src="popup.js"></script>
 		<script src="../options.js"></script>
 	</body>
 
