--- a/src/client/as3/options.html
+++ b/src/client/as3/options.html
@@ -1,26 +1,29 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-
+		
+		<link href="xenobe_omnibox.css" rel="stylesheet" type="text/css">		
 		<title>options</title>
-		<meta name="description" content="" />
-		<meta name="author" content="Matt Press" />
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
+	
 
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		
-	</head>
+		
+	<style>
+		
+	</style>
 
-	<body>
+	</head>
+	
+ 	<body>
 		<header>
 			<h1>ActionScript 3.0 Search</h1>
 		</header>
 		
-		
+		<p>Select Language (for Adobe help documents):</p>
 		<select id="languageDropdown"></select>
 
 		<script src="options.js"></script>
